# Log

./: CMakeLists.txt  Config.txt  README.md
Example/: CMakeLists.txt  main.cpp
Log/: CMakeLists.txt
Log/Include/: LogAPI.h
Log/Include/Log/: SyLogger.h  SyLoggerDLL.h  SyTraceContext.h
Log/Src/: SyLogger.cpp  SyTraceContext.cpp
Test/: CMakeLists.txt  LogTests.cpp
